--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,3 +1,4 @@
 <% title(@project.name, "Projects") %>
 <title><%= @title || "Ticketee" %></title>
 <h2><%= @project.name %></h2>
+<%= link_to "Edit Project", edit_project_path(@project) %>
